--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <link rel="stylesheet" href="css/owl.carousel.css" />
         <link rel="stylesheet" href="css/style.css" />
         <link
-            href="https://fonts.googleapis.com/css?family=Open+Sans:400,700"
+            href="https://fonts.googleapis.com/css?family=Josefin+Sans:400,700"
             rel="stylesheet"
             type="text/css"
         />
@@ -157,7 +157,6 @@
                                     alt="Blog Bild"
                                 />
                                 <h3><a href="#">Change Management</a></h3>
-                                <small>14. August 2016</small>
                                 <p>
                                     Unsere Change-Management-Dienstleistungen
                                     helfen Ihnen, erfolgreiche Veränderungen zu
@@ -223,7 +222,6 @@
                                     alt="Blog Bild"
                                 />
                                 <h3><a href="#">Risikomanagement</a></h3>
-                                <small>12. Juli 2016</small>
                                 <p>
                                     Mit unserem Risikomanagement unterstützen
                                     wir Sie dabei, Risiken zu identifizieren, zu
