--- a/index.html
+++ b/index.html
@@ -329,6 +329,87 @@
             </div>
         </section>
 
+        <!-- Team Start -->
+        <div style="margin-bottom: 30px" id="team" class="container-fluid py-5">
+            <div class="container pt-5 pb-3">
+                <div class="text-center mb-5">
+                    <h4>Unsere Mitarbeiter</h4>
+                    <h2>Lernen Sie unsere besten Mitarbeiter kennen</h2>
+                </div>
+                <div class="row">
+                    <div
+                        class="col-sm-6 col-md-6 col-lg-3 text-center team mb-4"
+                    >
+                        <div class="team-item rounded overflow-hidden mb-2">
+                            <div class="team-img position-relative">
+                                <img
+                                    class="img-fluid"
+                                    src="images/team-1.jpg"
+                                    alt=""
+                                />
+                            </div>
+                            <div class="bg-secondary p-4">
+                                <h5>Jhon Doe</h5>
+                                <p class="m-0">Leiter Finanzen</p>
+                            </div>
+                        </div>
+                    </div>
+                    <div
+                        class="col-sm-6 col-md-6 col-lg-3 text-center team mb-4"
+                    >
+                        <div class="team-item rounded overflow-hidden mb-2">
+                            <div class="team-img position-relative">
+                                <img
+                                    class="img-fluid"
+                                    src="images/team-2.jpg"
+                                    alt=""
+                                />
+                            </div>
+                            <div class="bg-secondary p-4">
+                                <h5>Sophia Rodriguez</h5>
+                                <p class="m-0">Berater</p>
+                            </div>
+                        </div>
+                    </div>
+                    <div
+                        class="col-sm-6 col-md-6 col-lg-3 text-center team mb-4"
+                    >
+                        <div class="team-item rounded overflow-hidden mb-2">
+                            <div class="team-img position-relative">
+                                <img
+                                    class="img-fluid"
+                                    src="images/team-3.jpg"
+                                    alt=""
+                                />
+                            </div>
+                            <div class="bg-secondary p-4">
+                                <h5>Liam Thompson</h5>
+                                <p class="m-0">Technologie-Berater</p>
+                            </div>
+                        </div>
+                    </div>
+                    <div
+                        class="col-sm-6 col-md-6 col-lg-3 text-center team mb-4"
+                    >
+                        <div class="team-item rounded overflow-hidden mb-2">
+                            <div class="team-img position-relative">
+                                <img
+                                    class="img-fluid"
+                                    src="images/team-4.jpg"
+                                    alt=""
+                                />
+                            </div>
+                            <div class="bg-secondary p-4">
+                                <h5>Noah Nguyen</h5>
+                                <p class="m-0">Dienstleiter</p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <!-- Team End -->
+
         <!-- Contact section
 ================================================== -->
         <section id="contact" class="parallax-section">
