--- a/index.html
+++ b/index.html
@@ -410,6 +410,95 @@
         </div>
         <!-- Team End -->
 
+        <!-- blog section
+================================================== -->
+
+        <section id="blog" class="paralla-section">
+            <div class="container">
+                <div class="row">
+                    <h2>Unser Blog</h2>
+                    <h4>Einblicke und Tipps</h4>
+
+                    <div class="blog-masonry masonry-true">
+                        <div
+                            class="post-masonry col-md-4 col-sm-6 wow fadeInUp"
+                        >
+                            <div class="blog-wrapper">
+                                <img
+                                    src="images/new-blog-1.jpg"
+                                    class="img-responsive"
+                                    alt="Blog Bild"
+                                />
+                                <h3>
+                                    <a href="#"
+                                        >Die Bedeutung einer starken
+                                        Unternehmensstrategie</a
+                                    >
+                                </h3>
+                                <p>
+                                    In diesem Beitrag untersuchen wir die
+                                    wichtigsten Elemente einer erfolgreichen
+                                    Unternehmensstrategie und geben praktische
+                                    Tipps, wie Sie Ihre eigene Strategie
+                                    entwickeln und umsetzen können.
+                                </p>
+                            </div>
+                        </div>
+                        <div
+                            class="post-masonry col-md-4 col-sm-6 wow fadeInUp"
+                            data-wow-delay="0.2s"
+                        >
+                            <div class="blog-wrapper">
+                                <img
+                                    src="images/new-blog-2.jpg"
+                                    class="img-responsive"
+                                    alt="Blog Bild"
+                                />
+                                <h3>
+                                    <a href="#"
+                                        >Die Rolle von Technologie in der
+                                        modernen Unternehmensberatung</a
+                                    >
+                                </h3>
+                                <p>
+                                    Erfahren Sie, wie moderne Technologien die
+                                    Art und Weise, wie Unternehmen beraten
+                                    werden, verändern. Wir diskutieren die
+                                    neuesten Trends und Technologien und wie sie
+                                    Ihnen helfen können, Ihre Geschäftsziele
+                                    effektiver zu erreichen.
+                                </p>
+                            </div>
+                        </div>
+                        <div
+                            class="post-masonry col-md-4 col-sm-6 wow fadeInUp"
+                            data-wow-delay="0.4s"
+                        >
+                            <div class="blog-wrapper">
+                                <img
+                                    src="images/new-blog-3.jpg"
+                                    class="img-responsive"
+                                    alt="Blog Bild"
+                                />
+                                <h3><a href="#">Fazit</a></h3>
+                                <p>
+                                    Eine starke Unternehmenskultur ist ein
+                                    entscheidender Erfolgsfaktor für jedes
+                                    Unternehmen. Sie fördert Mitarbeiterbindung,
+                                    Produktivität und Innovation und trägt dazu
+                                    bei, langfristigen Erfolg zu sichern. Indem
+                                    Unternehmen bewusst in den Aufbau einer
+                                    positiven Unternehmenskultur investieren,
+                                    können sie einen Wettbewerbsvorteil erlangen
+                                    und ihr Geschäftswachstum vorantreiben.
+                                </p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+
         <!-- Contact section
 ================================================== -->
         <section id="contact" class="parallax-section">
